--- a/cart/templates/remove.html
+++ b/cart/templates/remove.html
@@ -1,8 +1,8 @@
 <form action="{% url 'remove' %}" onsubmit="eliminarProductoCart(event, this)"  method="POST">
     {% csrf_token %}
     <input type="hidden" name="product_id" value="{{ product.id }}">
-    <button type="submit" class="btn btn-secondary">Eliminar</button>
-</form>
+    <button type="submit" class="btn" style="color: white; background-color: #0f3460 ;">Eliminar</button>
+</form> 
 
 <script>
     function eliminarProductoCart(id,form){
