--- a/orden/templates/breadcrumb.html
+++ b/orden/templates/breadcrumb.html
@@ -11,11 +11,11 @@
     }
   
     .breadcrumb-item.active {
-      color: rgb(255, 0, 0); 
+      color: #D1A0FF; 
     }
   
     .breadcrumb-item.active a {
-      color: rgb(255, 0, 0); 
+      color: #D1A0FF; 
     }
   </style>
   
