--- a/orden/templates/orden.html
+++ b/orden/templates/orden.html
@@ -124,7 +124,7 @@
             
             <div class="total-row">
                 <div>Total:</div>
-                <div style="color: var(--primary); font-size: 1.4rem;"> {{orden.total | format_price }}</div>
+                <div style="color: white; font-size: 1.4rem;"> {{orden.total | format_price }}</div>
             </div>
 
             <form method="POST">
