--- a/products/static/css/detail_product.css
+++ b/products/static/css/detail_product.css
@@ -145,3 +145,278 @@
     transform: scale(1.05);
     color: #fff;
 }
+/* Móviles pequeños */
+@media (max-width: 480px) {
+    .product-detail-container {
+        display: block;
+        padding: 20px; /* Agregar padding a la card */
+    }
+
+    .product-images {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    .main-image img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain; /* Ajusta la imagen sin distorsión */
+    }
+    .main-image{
+        width: auto; 
+        height: auto;
+    }
+
+    .thumbnail-images {
+        display: flex;
+        justify-content: center;
+    }
+
+    .thumbnail img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain; /* Ajusta la imagen sin distorsión */
+    }
+
+    .product-info {
+        margin-top: 10px;
+    }
+
+    .quantity-selector {
+        font-size: 14px; /* Reducir tamaño de botones */
+        padding: 8px 16px; /* Reducir tamaño de botones */
+    }
+}
+
+/* Móviles pequeños */
+@media (max-width: 640px) {
+    .product-detail-container {
+        display: block;
+        padding: 20px; /* Agregar padding a la card */
+    }
+
+    .product-images {
+        display: block;
+    }
+
+    .main-image img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+    .main-image{
+        width: auto; 
+        height: auto;
+    }
+
+    .thumbnail-images {
+        display: flex;
+        justify-content: center;
+    }
+
+    .thumbnail img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+
+    .product-info {
+        margin-top: 10px;
+    }
+
+    .quantity-selector {
+        font-size: 14px; /* Reducir tamaño de botones */
+        padding: 10px 18px; /* Reducir tamaño de botones */
+    }
+}
+
+/* Estilos responsive para filtros */
+@media (max-width: 768px) {
+    .product-detail-container {
+        display: block;
+        padding: 20px; /* Agregar padding a la card */
+    }
+
+    .product-info {
+        margin-top: 20px;
+    }
+
+    .product-brand,
+    .product-price,
+    .product-description {
+        font-size: 14px;
+    }
+
+    .quantity-selector {
+        margin-top: 10px;
+        font-size: 14px; /* Reducir tamaño de botones */
+        padding: 10px 20px; /* Reducir tamaño de botones */
+    }
+
+    .main-image img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+    .main-image{
+        width: auto; 
+        height: auto;
+    }
+}
+
+/* Móviles grandes y tablets verticales */
+@media (min-width: 641px) and (max-width: 768px) {
+    .product-detail-container {
+        display: flex;
+        flex-direction: column;
+        padding: 20px; /* Agregar padding a la card */
+    }
+
+    .product-images {
+        margin-bottom: 20px;
+    }
+
+    .main-image img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+    .main-image{
+        width: auto; 
+        height: auto;
+    }
+
+    .thumbnail-images {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .thumbnail img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+
+    .product-info {
+        text-align: center;
+    }
+
+    .quantity-selector {
+        font-size: 16px; /* Reducir tamaño de botones */
+        padding: 12px 22px; /* Reducir tamaño de botones */
+    }
+}
+
+/* Tablets horizontales y laptops pequeñas */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .product-detail-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 30px; /* Agregar padding a la card */
+    }
+
+    .product-images {
+        width: 45%;
+    }
+
+    .main-image img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+    .main-image{
+        width: auto; 
+        height: auto;
+    }
+
+    .thumbnail-images {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .thumbnail img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+
+    .product-info {
+        width: 50%;
+    }
+
+    .quantity-selector {
+        margin-top: 15px;
+        font-size: 16px; /* Reducir tamaño de botones */
+        padding: 14px 24px; /* Reducir tamaño de botones */
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .product-detail-container {
+        display: flex;
+        flex-direction: row;
+        padding: 30px; /* Agregar padding a la card */
+    }
+
+    .product-images {
+        width: 50%;
+    }
+
+    .product-info {
+        width: 50%;
+        padding-left: 20px;
+    }
+}
+
+/* Tablets grandes */
+@media (min-width: 1025px) {
+    .product-detail-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 40px; /* Agregar padding a la card */
+    }
+
+    .product-images {
+        width: 40%;
+    }
+
+    .product-info {
+        width: 55%;
+        padding-left: 20px;
+    }
+
+    .main-image img {
+        width: 90%; 
+        height: 90%; 
+        object-fit: contain;
+    }
+    .main-image{
+        width: auto; 
+        height: auto;
+    }
+
+    .thumbnail-images {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .thumbnail img {
+        width: 70%; 
+        height: 70%; 
+        object-fit: contain;
+    }
+
+    .product-brand,
+    .product-price,
+    .product-description {
+        font-size: 16px;
+    }
+
+    .quantity-selector {
+        font-size: 18px; /* Reducir tamaño de botones */
+        padding: 16px 28px; /* Reducir tamaño de botones */
+    }
+}
