--- a/products/static/css/list_products.css
+++ b/products/static/css/list_products.css
@@ -137,8 +137,9 @@
 .container-main {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     max-width: 1300px;
-    margin: 0 auto;
+    margin: auto;
     padding: 0 1rem;
 }
 
