--- a/payment/templates/confirmed.html
+++ b/payment/templates/confirmed.html
@@ -193,7 +193,7 @@
 </style>
 
 <!-- Main Content -->
-<div class="main-container" style="margin-top: -100px;">
+<div class="main-container" style="margin-top: 3%;">
     <div class="container">
         <div class="text-center">
             <!-- Success Icon -->
